# spatial-tcr

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
notebooks/XeniumTCR-analysis/: 01-prep_data.ipynb  02-split-samples.ipynb
notebooks/tcr-seq-analysis/: 01-prepare-tcr-seq-data.ipynb  02-ref-tcr-clone-size-distribution-cd4-cd8.ipynb
notebooks/xenium-tcr-analysis/: 00-check-transcript-assign.ipynb  01-prep_data.ipynb  02-split-samples.ipynb  03.1-classify-celltypes.ipynb  03.2-tcell-subtypes.ipynb  03.3-harmonize-annotations.ipynb  04-check-celltypes.ipynb  04.1-check-marker-mixing.ipynb  04.2-check-tcell-subtypes.ipynb  05.1-glom-ident.ipynb  05.2-tcell-infilrate-ident.ipynb  06-filter-trv-genes.ipynb  06.1-tcr-distribution.ipynb  06.2-glom-tcr-distribution.ipynb  07-find-clones.ipynb  08.1-clonal-expansion-overlap.ipynb  09-analyze-clonal-clusters.ipynb  09.2-cc-nhood-analysis-v2.ipynb  09.3-cc-ct-composition.ipynb  10.4-plot-dgT-abT-example.ipynb  13-analyze-gdTs.ipynb  13.1-gdT-spatial-plot.ipynb  14-expanded-vs-singles-spatial-kde.ipynb
notebooks/xenium-tcr-analysis/revision-extras/: 01-check_trv_bias_single_vs_paired.ipynb  01.1-check_trv_bias_single_vs_paired_unmerged.ipynb  02-per_sample_probe_proportion_comparison.ipynb  03-annotate_peri_glom_areas.ipynb  04-better_characterize_tcell_infiltrates.ipynb  05-check_CD8+_clonal_cluster_localization.ipynb  06-check_CD4CD8_spatial_differences.ipynb  07-check_trv_colocalization_with_cd3.ipynb  09-check_batch_effect_removal.ipynb  10-annotate_single_chain_clonal_clusters.ipynb  11-check-clonal-cluster-nhood-differences-vs-random.ipynb  12-analyze-codetection.ipynb  12.1-analyze_codetection.ipynb  12.2-visualize-codetection.ipynb  13-clonal_cluster_DEGs_with_infiltrate_context.ipynb  15-plot-trav11+trav12-cooccurences.ipynb  16-compare-clonal-cluster-numbers.ipynb
notebooks/xenium-tcr-analysis/vgene-analysis/: 00-identify-noisy-vgenes.ipynb  gd-minimal-analysis.ipynb  trav-trbv-expansion-cd4-cd8.ipynb  vgene-specific-repertoire-treemap.ipynb
src/spatial_tcr/: alluvial.py  annotation.py  clonal_expansion.py  clustering.py  codetection.py  colors.py  distances.py  gene_colocalization.py  nhood_analysis.py  nhood_enrichment.py  notebook_runner.py  permutation.py  plotting.py  sdata_utils.py  spatial.py  spatialtcr_runner.py  stats.py  tcr.py  tcr_seq_notebook_runner.py  utils.py
src/spatial_tcr/pl/: __init__.py  spatial.py  utils.py
tests/: test_notebook_runner.py
