[project]
name = "spatial-tcr"
version = "0.1.0"
description = ""
authors = [
    {name = "dschaub95",email = "schaub.darius@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nichepca @ git+https://github.com/imsb-uke/nichepca.git@main",
    "jupyter",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "tifffile",
    "xarray",
    "alphashape"
]

[tool.poetry]
packages = [{include = "spatial_tcr", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
