[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "spatial-tcr"
version = "0.1.0"
description = "Code and for the manuscript Spatial Analysis of T Cell Clonality in Autoimmune Kidney Disease Using TRV Probes"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Darius Schaub", email = "schaub.darius@gmail.com" },
]
authors = [
  { name = "Darius Schaub" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
scripts = { xenium-notebooks = "spatial_tcr.notebook_runner:main", tcr-seq-notebooks = "spatial_tcr.tcr_seq_notebook_runner:main", spatialtcr = "spatial_tcr.spatialtcr_runner:main" }
dependencies = [
    "alphashape>=1.3.1",
    "biopython>=1.86",
    "colorcet>=3.1.0",
    "decoupler>=2.1.2",
    "gseapy>=1.1.11",
    "harmonypy>=0.0.10",
    "imagecodecs>=2026.1.14",
    "jenkspy>=0.4.1",
    "jupyter>=1.1.1",
    "matplotlib-venn>=1.1.2",
    "nichepca>=0.0.3",
    "novae>=1.0.1",
    "openpyxl>=3.1.5",
    "pandas<3",
    "papermill>=2.7.0",
    "run-ipynb>=0.1.1",
    "scanpy>=1.11.5",
    "scib>=1.1.7",
    "scib-metrics>=0.5.8",
    "spatialdata>=0.6.1",
    "spatialtools",
    "squarify>=0.4.4",
    "tqdm>=4.67.1",
]
optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
  "ruff",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]
optional-dependencies.test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",     # For VS Code’s coverage functionality
]

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

# Test the lowest and highest supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.11", "3.13" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.13" ]

[tool.hatch.envs.hatch-test]
features = [ "dev", "test" ]

[tool.hatch.envs.hatch-test.overrides]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 88
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B007", # Loop control variable not used within the loop
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D200", # First line should end with a period
  "D203", # We don’t want a blank line before a class docstring
  "D205", # Blank line before last paragraph of docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E402", # module level import not at top of file
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
  "B905", # zip does not require strict=True
  "F405", # allow star imports
  "E722", # do not use bare except
  "BLE001", # do not use bare except
  "F403", # allow multiple statements on one line
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.uv.sources]
spatialtools = { path = "/bonn-epyc/projects/dschaub/method-projects/spatialtools", editable = true }
